# python-machine-learning-course

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/workflows/: semantic-release.yml
docs/: index.md
docs/⚙️-Installations/: install_anaconda.md  install_docker.md  install_git.md  install_python.md  isntall_vscode.md
docs/📚-Tutorials/🎨-Plotting/: matplotlib-axes.ipynb  matplotlib-plots.ipynb  seaborn-plots.ipynb  seaborn-styling.ipynb
docs/📚-Tutorials/🐍-Python-Basics/: booleans.ipynb  classes.ipynb  conditionals.ipynb  decorators.ipynb  dictionaries.ipynb  for-loops.ipynb  functions.ipynb  integers-and-floats.ipynb  lists.ipynb  sets.ipynb  strings.ipynb  tuples.ipynb  working-with-files.ipynb
docs/📚-Tutorials/🐼-Pandas/: pandas-basics.ipynb  pandas-df-cleaning.ipynb  pandas-df-creation.ipynb  (+1 more)
docs/🗃️-Python-Project/: gitignore.md  index.md  mkdocs.md  pre-commit-config.md  pyproject.md  readme-file.md  structuring-project.md
docs/🧪-Exercises/: the-alien-invasion-solution.ipynb  the-alien-invasion.ipynb  the-elixir-wine-solution.ipynb  the-elixir-wine.ipynb  the-fantasy-zookeeper-solution.ipynb  the-fantasy-zookeeper.ipynb  the-great-iris-festival-solution.ipynb  the-great-iris-festival.ipynb  the-tic-tac-toe-referee-solution.ipynb  the-tic-tac-toe-referee.ipynb
python_ml_course/: __init__.py
search/: search_index.json
⚙️-Installations/install_anaconda/: index.html
⚙️-Installations/install_docker/: index.html
⚙️-Installations/install_git/: index.html
⚙️-Installations/install_python/: index.html
⚙️-Installations/isntall_vscode/: index.html
📚-Tutorials/📑-The-Standard-Library/: index.html
📚-Tutorials/📑-The-Standard-Library.ipynb/: index.html
🗃️-Python-Project/: index.html
🗃️-Python-Project/gitignore/: index.html
🗃️-Python-Project/mkdocs/: index.html
🗃️-Python-Project/pre-commit-config/: index.html
🗃️-Python-Project/pyproject/: index.html
🗃️-Python-Project/readme-file/: index.html
🗃️-Python-Project/structuring-project/: index.html
🧪-Exercises/the-alien-invasion/: index.html
🧪-Exercises/the-alien-invasion-solution/: index.html
🧪-Exercises/the-elixir-wine/: index.html
🧪-Exercises/the-elixir-wine-solution/: index.html
🧪-Exercises/the-fantasy-zookeeper/: index.html
🧪-Exercises/the-fantasy-zookeeper-solution/: index.html
🧪-Exercises/the-great-iris-festival/: index.html
🧪-Exercises/the-great-iris-festival-solution/: index.html
🧪-Exercises/the-tic-tac-toe-referee/: index.html
🧪-Exercises/the-tic-tac-toe-referee-solution/: index.html
(+56 files in other folders)
