[tool.poetry]
name = "python_ml_course"
version = "0.10.1"
description = "will teach you about python basics focused to Machine Learning"
authors = ["Andrés Matesanz <Matesanz.Cuadrado@gmail.com>"]
readme = "README.md"
packages = [{include = "python_ml_course"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
pre-commit = "^2.20.0"
commitizen = "^2.32.2"
bandit = "^1.7.4"
autoflake = "^1.5.3"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
pytest = "^7.1.3"
jupyter = "^1.0.0"
python-semantic-release = "^7.33.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocstrings-python = "^0.7.1"
mkdocs-material = "^8.4.2"
mkdocs-jupyter = "^0.22.0"
pymdown-extensions = "^9.10"

[tool.semantic_release]
version_variable = "python_ml_course/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
commit_subject = "🔖 v{version}"
commit_parser = "semantic_release.history.emoji_parser"
major_emoji = "💥"  # breaking change
minor_emoji = "✨,🚑,🎉,🧪"  # feature, hotfix, begin, test
patch_emoji = "🐛,🩹,🔒,📝,⚡️,👷"  # bugfix, simple fix, security, docs, performance
build_command = "poetry build"
upload_to_repository = false
upload_to_release = true  # upload to github release
branch = "main"

[tool.black]
line_length = 100
max-complexity = 10

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
extend_skip_glob = ["docs/*", "notebooks/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pydocstyle]
convention = "google"
add-select = ["D400", "D401", "D411"]

[tool.pylint]
    [tool.pylint.main]
    load-plugins=[
        "pylint.extensions.check_elif",
        "pylint.extensions.bad_builtin",
        "pylint.extensions.docparams",
        "pylint.extensions.for_any_all",
        "pylint.extensions.set_membership",
        "pylint.extensions.code_style",
        "pylint.extensions.overlapping_exceptions",
        "pylint.extensions.typing",
        "pylint.extensions.redefined_variable_type",
        "pylint.extensions.comparison_placement"]

    [tool.pylint.messages_control]
    disable = [
        "too-few-public-methods",
        "too-many-arguments"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
